<resources>
    <string name="app_name">Caritathelp</string>

    <!-- Views Names -->
    <string name="view_name_home">@string/app_name</string>

    <string name="view_name_mailbox">@string/app_name</string>

    <string name="view_name_notifications">@string/app_name</string>

    <string name="view_name_submenu">@string/app_name</string>
    <string name="view_name_submenu_profile">Profil</string>
    <string name="view_name_submenu_my_organisations">Mes associations</string>
    <string name="view_name_submenu_my_organisations_creation">Créer une association</string>
    <string name="view_name_submenu_my_events">Mes événements</string>
    <string name="view_name_submenu_my_events_creation">Créer un événement</string>
    <string name="view_name_submenu_account_management">Gestion de compte</string>
    <string name="view_name_submenu_friends">Amis</string>
    <string name="view_name_submenu_friends_add">Rechercher des amis</string>
    <string name="view_name_submenu_invitations">Invitations</string>

    <string name="view_name_organisation">Association</string>
    <string name="view_name_organisation_post">Poster</string>
    <string name="view_name_organisation_members">Membres</string>
    <string name="view_name_organisation_events">Événement</string>
    <string name="view_name_organisation_informations">Informations</string>
    <string name="view_name_organisation_management">Gestion de l\'association</string>

    <string name="view_name_organisation_event_guests">Participants</string>
    <string name="view_name_organisation_event_management">Gestion de l\'événement</string>

    <!-- Search Bar -->
    <string name="search_bar_btn_search">Search</string>

    <!-- Bottom Navigation Bar -->
    <string name="bottom_navigation_bar_news">Actualités</string>
    <string name="bottom_navigation_bar_mailbox">Messages</string>
    <string name="bottom_navigation_bar_notifications">Notifications</string>
    <string name="bottom_navigation_bar_profile">Mon profil</string>

    <!-- Connection View -->
    <string name="connectionview_title">Connexion</string>
    <string name="text_view_email">Email</string>
    <string name="text_view_password">Mot de passe</string>
    <string name="btn_connection">Connexion</string>
    <string name="btn_subscribe">Inscription</string>
    <string name="text_view_password_missing">Mot de passe oublié?</string>

    <!-- SignUp Views-->
    <string name="sign_up_geolocation">Géolocalisation</string>
    <string name="sign_up_notifications">Notifications</string>
    <string name="sign_up_firstname">Prénom</string>
    <string name="sign_up_lastname">Nom</string>
    <string name="sign_up_birthday">Date de naissance</string>
    <string name="sign_up_man">Homme</string>
    <string name="sign_up_woman">Femme</string>
    <string name="sign_up_mail">E-mail</string>
    <string name="sign_up_password">Mot de passe</string>
    <string name="sign_up_password_verifiction">Vérification du mot de passe</string>
    <string name="sign_up_btn_next">Continuer</string>
    <string name="sign_up_btn_next_end">Continuer (fin)</string>

    <!-- Subscribe View -->
    <!-- Presentation Page -->
    <string name="subscribe_title">Rejoindre CaritatHelp</string>
    <string name="subscribe_presentation_title">Présentez vous</string>
    <string name="subscribe_firstname">Prénom</string>
    <string name="subscribe_lastname">Nom</string>
    <string name="subscribe_gender_male">Masculin</string>
    <string name="subscribe_gender_female">Féminin</string>
    <string name="subscribe_btn_birthday">Date de naissance</string>
    <!-- Name Form Page -->
    <string name="subscribe_logform_title">Création des identifiants</string>
    <string name="subscribe_mail">E-mail</string>
    <string name="subscribe_password">Mot de passe</string>
    <string name="subscribe_password_checking">Vérification du mot de passe</string>
    <!-- Terms Form Page -->
    <string name="subscribe_termsform_title">Conditions d\'utilisation</string>
    <string name="subscribe_geolocalisation">Géolocalisation</string>
    <string name="subscribe_notification">Notifications</string>
    <string name="subscribe_terms_conditions">Termes et Conditions</string>
    <string name="subscribe">S\'inscrire</string>

    <!-- OrganisationSearch View -->

    <!-- MailBox View -->
    <string name="mailbox_toolbar_title">Messagerie</string>

    <!-- Notifications View -->
    <string name="notifications_toolbar_title">Notifications</string>

    <!-- SubMenu View -->
    <string name="submenu_my_profile">Mon profil</string>
    <string name="submenu_my_organisations">Mes associations</string>
    <string name="submenu_my_events">Mes événements</string>
    <string name="submenu_friends">Amis</string>
    <string name="submenu_invitations">Invitations</string>
    <string name="submenu_account_settings">Gestion de compte</string>
    <string name="submenu_security">Confidentialités</string>
    <string name="submenu_help">Aide</string>
    <string name="submenu_logout">Déconnexion</string>
    <string name="submenu_delete_account">Supprimer mon compte</string>

    <!-- Profile View -->
    <string name="profile_friends">Amis</string>
    <string name="profile_organisations">Associations</string>
    <string name="profile_events">Événements</string>

    <!-- MyOrganisations View -->
    <string name="my_organisations_title">Mes associations</string>

    <!-- MyEvents View -->
    <!-- Spinner -->
    <string-array name="my_events_spinner">
        <item>En ce moment</item>
        <item>A venir</item>
        <item>Passé</item>
        <item>Organisateur</item>
    </string-array>

    <!-- MyFriends View -->
    <string name="friends_my_friends">Mes amis</string>
    <string name="friends_invitations">Invitations</string>
    <string name="friends_sent">Envoyées</string>

    <!-- Invitations View -->
    <string name="invitations_friends">Amis</string>
    <string name="invitations_organisations">Associations</string>
    <string name="invitations_events">Événement</string>

    <!-- OrganisationCreation View -->
    <string name="organisation_creation_bar_title">Créer une association</string>

    <!-- Organisation View -->
    <string name="organisation_members">Membres</string>
    <string name="organisation_events">Événement</string>
    <string name="organisation_informations">Informations</string>

    <!-- Organisation Members View -->

    <!-- Organisation Events View -->

    <!-- Organisation Event View -->
    <string name="organisation_event_members">Participants</string>
    <string name="organisation_event_informations">Informations</string>

    <!-- OrganisationManagement View -->
    <string name="organisation_management_bar_title">Gérer mon association</string>
    <string name="organisation_management_post">Ajouter une publication</string>
    <string name="organisation_management_create_event">Créer un événement</string>
    <string name="organisation_management_members">Gérer les membres</string>
    <string name="organisation_management_settings">Modifier les paramètres</string>
    <string name="organisation_management_emergency_system">Système d\'urgence</string>
    <string name="organisation_management_delete">Supprimer l\'association</string>

    <!-- OrganisationManagement Event Creation View -->
    <string name="organisation_management_event_title">Titre de l\'événement</string>
    <string name="organisation_management_event_begin">Début de l\'événement</string>
    <string name="organisation_management_event_end">Fin de l\'événement</string>
    <string name="organisation_management_event_date">Date</string>
    <string name="organisation_management_event_time">Heure</string>
    <string name="organisation_management_event_location">Lieu</string>
    <string name="organisation_management_event_description">Description</string>
    <string name="organisation_management_event_create">Créer</string>

    <!-- EventManagement Event Creation View -->
    <string name="organisation_event_management_save">Sauvegarder les changements</string>

    <!-- Account Settings View -->
    <string name="account_settings_toolbar_title">Gestion de compte</string>
    <string name="account_settings_current_password">Mot de passe actuel</string>
    <string name="account_settings_new_password">Nouveau mot de passe</string>
    <string name="account_settings_new_password_checking">Retaper le nouveau mot de passe</string>
    <string name="account_settings_save_changes">Sauvegarder les changements</string>


</resources>
