<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <TextView
        android:id="@+id/subscribe_name_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/_2sdp"
        android:padding="@dimen/_4sdp"

        android:text="@string/subscribe_logform_title"
        android:textSize="@dimen/_20sdp"
        />

    <LinearLayout
        android:layout_below="@+id/subscribe_name_form_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <EditText
            android:id="@+id/subscribe_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:padding="@dimen/_15sdp"

            android:hint="@string/subscribe_mail"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:background="@color/bootstrap_gray_lightest"
            />

        <EditText
            android:id="@+id/subscribe_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:padding="@dimen/_15sdp"

            android:hint="@string/subscribe_password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:background="@color/bootstrap_gray_lightest"
            />

        <EditText
            android:id="@+id/subscribe_password_checking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:padding="@dimen/_15sdp"

            android:hint="@string/subscribe_password_checking"
            android:singleLine="true"
            android:inputType="textPassword"
            android:background="@color/bootstrap_gray_lightest"
            />


    </LinearLayout>


</RelativeLayout>