<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <TextView
        android:id="@+id/subscribe_name_form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/_2sdp"
        android:padding="@dimen/_4sdp"

        android:text="@string/subscribe_presentation_title"
        android:textSize="@dimen/_20sdp"
        />

    <!-- NAME FORM STARTS -->
    <LinearLayout
        android:id="@+id/subscribe_name_form"
        android:layout_below="@+id/subscribe_name_form_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/_15sdp">

            <EditText
                android:id="@+id/subscribe_firstname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"

                android:hint="@string/subscribe_firstname"
                android:singleLine="true"
                android:inputType="text"
                android:background="@color/bootstrap_gray_lightest" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/_15sdp">
            <EditText
                android:id="@+id/subscribe_lastname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"

                android:hint="@string/subscribe_lastname"
                android:singleLine="true"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/subscribe_gender_toggles"
        android:layout_below="@+id/subscribe_name_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ToggleButton
            android:id="@+id/subscribe_gender_male"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/_15sdp"
            android:padding="@dimen/_20sdp"

            android:checked="true"
            android:textOn="@string/subscribe_gender_male"
            android:textOff="@string/subscribe_gender_male"
            />

        <ToggleButton
            android:id="@+id/subscribe_gender_female"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/_15sdp"
            android:padding="@dimen/_20sdp"

            android:textOn="@string/subscribe_gender_female"
            android:textOff="@string/subscribe_gender_female"
            />

    </LinearLayout>

    <Button
        android:id="@+id/subscribe_btn_birthday"
        android:layout_below="@+id/subscribe_gender_toggles"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:padding="@dimen/_15sdp"

        android:text="@string/subscribe_btn_birthday"
        android:background="@color/bootstrap_gray_lightest"
        android:onClick="setDate"
        />

</RelativeLayout>