<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bootstrap_gray_lighter">

    <!-- TOP BAR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"

        android:focusable="true"
        android:focusableInTouchMode="true"

        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/primary">

        <LinearLayout
            android:id="@+id/top_bar_organisation_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="7">

            <LinearLayout
                android:id="@+id/top_bar_organisation_management_return"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/arrow_top_bar"/>

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="6"

                android:gravity="center"
                android:text="@string/organisation_management_bar_title"
                android:textColor="@color/icons"
                android:textSize="@dimen/_22sdp" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- DIVIDER -->
            <View style="@style/Divider" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/bootstrap_gray_lighter" />
            <View style="@style/Divider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/organisation_management_post"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_5sdp"

                    android:background="@color/icons"
                    android:gravity="center"
                    android:text="@string/organisation_management_post"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/primary_text" />

                <!-- DIVIDER -->
                <View style="@style/Divider" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@color/bootstrap_gray_lighter" />
                <View style="@style/Divider" />

                <TextView
                    android:id="@+id/organisation_management_create_event"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_5sdp"

                    android:gravity="center"
                    android:background="@color/icons"
                    android:text="@string/organisation_management_create_event"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/primary_text" />

                <!-- DIVIDER -->
                <View style="@style/Divider" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@color/bootstrap_gray_lighter" />
                <View style="@style/Divider" />

                <TextView
                    android:id="@+id/organisation_management_settings"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_5sdp"

                    android:gravity="center"
                    android:background="@color/icons"
                    android:text="@string/organisation_management_settings"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@color/primary_text" />

                <!-- DIVIDER -->
                <View style="@style/Divider" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@color/bootstrap_gray_lighter" />
                <View style="@style/Divider" />

                <TextView
                    android:id="@+id/organisation_management_emergency_system"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_5sdp"

                    android:gravity="center"
                    android:background="@color/icons"
                    android:text="@string/organisation_management_emergency_system"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@android:color/holo_red_dark" />

                <!-- DIVIDER -->
                <View style="@style/Divider" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@color/bootstrap_gray_lighter" />
                <View style="@style/Divider" />

                <TextView
                    android:id="@+id/organisation_management_delete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_5sdp"

                    android:gravity="center"
                    android:background="@color/icons"
                    android:text="@string/organisation_management_delete"
                    android:textSize="@dimen/_18sdp"
                    android:textColor="@android:color/holo_red_dark" />

                <!-- DIVIDER -->
                <View style="@style/Divider" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@color/bootstrap_gray_lighter" />
                <View style="@style/Divider" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>